# fastapi-book

./: .gitignore  README.md  pyproject.toml
ch01/: Dockerfile
ch01/todos/: api.py
ch02/todos/: api.py  model.py  todo.py
ch03/todos/: model.py  todo.py
ch04/todos/: model.py  requirements.txt
fastapi_book/todos/: api.py
