[tool.poetry]
name = "fastapi-book"
version = "0.1.0"
description = ""
authors = ["jadeitefirst <hyunyang.seo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
